--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 server.port=8855
 
-spring.cloud.config.server.native.search-locations=classpath:/global-config
+#spring.profiles.active=native
+
+#spring.cloud.config.server.native.search-locations=classpath:/global-config
+
+spring.cloud.config.server.git.uri=https://github.com/javayp/netflix-pack-stack/tree/master/device-global-config
