--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -1,11 +1,12 @@
 server:
-  port: 8855
+  port: 8888
 
 spring:
   cloud:
     config:
       server:
         git:
-          uri: https://github.com/javayp/netflix-pack-stack/tree/master/device-global-config
-          #username:
-          #password:
+          uri: https://github.com/javayp/device-global-config
+          search-paths:
+            - 'device*'
+
